# Igor

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  README.txt
src/iaux/: CMakeLists.txt
src/iaux/iaux/: iaDefines.h  iaux.cpp  iaux.h
src/iaux/iaux/data/: iaBits.h  iaBits.inl  iaCircle.h  iaCircle.inl  iaColor3.cpp  iaColor3.h  iaColor3.inl  iaColor4.cpp  iaColor4.h  iaColor4.inl  iaConvert.cpp  iaConvert.h  iaGradient.h  iaGradient.inl  iaIDGenerator.h  iaIDGenerator.inl  iaKeyFrameGraph.cpp  iaKeyFrameGraph.h  iaKeyFrameGraph.inl  iaMemBlock.cpp  iaMemBlock.h  iaMemBlockControl.cpp  iaMemBlockControl.h  iaRLE.h  iaRLE.inl  iaRectangle.h  iaRectangle.inl  iaRingQueue.h  iaSerializable.cpp  iaSerializable.h  iaSerializable.inl  iaSphere.h  iaSphere.inl  iaString.cpp  iaString.h  iaString.inl  iaUUID.cpp  iaUUID.h
src/iaux/iaux/math/: iaBSpline.cpp  iaBSpline.h  iaBSpline.inl  iaEasing.h  iaMath.cpp  iaMath.h  iaMath.inl  iaMatrix.h  iaMatrix.inl  iaMatrix2D.h  iaMatrix2D.inl  iaQuaternion.h  iaQuaternion.inl  iaRandom.cpp  iaRandom.h  iaRandomNumberGenerator.cpp  iaRandomNumberGenerator.h  iaRandomNumberGenerator.inl  iaTransform.h  iaTransform.inl  iaUUID.cpp  iaUUID.h  iaVector2.h  iaVector2.inl  iaVector3.h  iaVector3.inl  iaVector4.h  iaVector4.inl
src/iaux/iaux/statemachine/: iaState.cpp  iaState.h  iaStateMachine.cpp  iaStateMachine.h  iaTransition.cpp  iaTransition.h
src/iaux/iaux/system/: iaClock.cpp  iaClock.h  iaConsole.cpp  iaConsole.h  iaDate.cpp  iaDate.h  iaDelegate.h  iaDirectory.cpp  iaDirectory.h  iaEvent.h  iaFile.cpp  iaFile.h  iaMutex.cpp  iaMutex.h  iaSignal.h  iaSingleton.h  iaSlot.h  iaSystem.cpp  iaSystem.h  iaThread.cpp  iaThread.h  iaTime.cpp  iaTime.h
src/iaux/iaux/test/: iaTest.cpp  iaTest.h
src/iaux/iaux/utils/: iaJson.cpp  iaJson.h  iaJson.inl
src/igor/: CMakeLists.txt
src/igor/data/: igor_resource_dictionary.json  igor_resource_dictionary.xml
src/igor/data/materials/: colorID.smat  default.mat  emitter_overlay_flat.smat  flat_shaded_blend.smat  particles.smat  particles_ortho_projection.mat  particles_ortho_projection.smat  texture_shaded.mat  textured.mat  transform_overlay_base.smat
src/igor/data/shaders/: bounding_box.smat  cellshading_yellow.smat  colorID.smat  default.smat  emitter_overlay_flat.smat  emitter_overlay_volume.smat  flat_shaded_no_depth_test.shader  orientation_plane.shader  skybox.smat  texture_shaded.smat  texture_shaded_blend.shader  textured.smat
src/igor/igor/: iDefines.h  iVersion.h  igor.cpp  igor.h
src/igor/igor/audio/: iAudio.cpp  iAudio.h
src/igor/igor/data/: iAABox.h  iAABox.inl  iAACube.h  iAACube.inl  iBone.cpp  iBone.h  iFrustum.h  iFrustum.inl  iIntersection.h  iIntersection.inl  iItem.cpp  iItem.h  iItem.inl  iItemData.cpp  iItemData.h  iItemPath.cpp  iItemPath.h  iJoint.cpp  iJoint.h  iMimeData.cpp  iMimeData.h  iOctree.cpp  iOctree.h  iOctree.inl  iOctreeOld.cpp  iOctreeOld.h  iParameters.cpp  iParameters.h  iParameters.inl  iPlane.h  iPlane.inl  iQuadtree.cpp  iQuadtree.h  iQuadtree.inl  iRay.h  iRay.inl  iRectangle.h  iRectangle.inl  iSkeleton.cpp  iSkeleton.h  (+4 more)
src/igor/igor/entities/: iComponent.cpp  iComponent.h  iComponents.h  iECS.cpp  iECS.h  iEntity.cpp  iEntity.h  iEntity.inl  iEntityComponent.cpp  iEntityComponent.h  iEntityComponentSystem.cpp  iEntityComponentSystem.h  iEntityIDPath.cpp  iEntityIDPath.h  iEntityLocatable.cpp  iEntityLocatable.h  iEntityManager.cpp  iEntityManager.h  iEntityScene.cpp  iEntityScene.h  iEntityScene.inl  iEntitySystem.cpp  iEntitySystem.h  iEntitySystemModule.cpp  iEntitySystemModule.h  iEntitySystemModule.inl  iEntityView.cpp  iEntityView.h
src/igor/igor/evaluation/: iEvaluation.cpp  iEvaluation.h  iEvaluationManager.cpp  iEvaluationManager.h  iEvaluationManager.inl  iEvaluationScript.cpp  iEvaluationScript.h  iEvaluationTransform.cpp  iEvaluationTransform.h
src/igor/igor/events/: iEvent.cpp  iEvent.h  iEventECS.cpp  iEventECS.h  iEventFilesystem.cpp  iEventFilesystem.h  iEventKeyboard.cpp  iEventKeyboard.h  iEventMouse.cpp  iEventMouse.h  iEventProject.cpp  iEventProject.h  iEventScene.cpp  iEventScene.h  iEventWindow.cpp  iEventWindow.h
src/igor/igor/generation/: iContouringCubes.cpp  iContouringCubes.h  iLSystem.cpp  iLSystem.h  iPerlinNoise.cpp  iPerlinNoise.h  iPerlinNoise.inl
src/igor/igor/graphics/: iInstancer.cpp  iInstancer.h  iInstancer.inl  iRenderEngine.cpp  iRenderEngine.h  iRenderStateSet.cpp  iRenderStateSet.h  iRenderStateSet.inl  iRenderer.cpp  iRenderer.h  iRenderer2.cpp  iRenderer2.h  iRenderer2D.cpp  iRenderer2D.h  iView.cpp  iView.h
src/igor/igor/layers/: iLayer.cpp  iLayer.h  iLayerProfiler.cpp  iLayerProfiler.h  iLayerStack.cpp  iLayerStack.h  iLayerWidgets.cpp  iLayerWidgets.h
src/igor/igor/os/: iApplication.cpp  iApplication.h  iDefinesLinux.h  iDefinesWindows.h  iKeyboard.cpp  iKeyboard.h  iMouse.cpp  iMouse.h  iOSEventListener.h  iStopWatch.cpp  iStopWatch.h  iTimer.cpp  iTimer.h  iTimerHandle.cpp  iTimerHandle.h  iWindow.cpp  iWindow.h
src/igor/igor/physics/: iPhysics.cpp  iPhysics.h  iPhysicsBody.cpp  iPhysicsBody.h  iPhysicsCollision.cpp  iPhysicsCollision.h  iPhysicsCollisionConfig.cpp  iPhysicsCollisionConfig.h  iPhysicsJoint.cpp  iPhysicsJoint.h  iPhysicsMaterial.cpp  iPhysicsMaterial.h  iPhysicsMaterialCombo.cpp  iPhysicsMaterialCombo.h  iPhysicsUserMeshCollisionHandler.cpp  iPhysicsUserMeshCollisionHandler.h  iPhysicsWorld.cpp  iPhysicsWorld.h
src/igor/igor/renderer/: iInstancer.cpp  iInstancer.h  iInstancer.inl  iRenderEngine.cpp  iRenderEngine.h  iRenderEngineOld.cpp  iRenderEngineOld.h  iRenderStateSet.cpp  iRenderStateSet.h  iRenderStateSet.inl  iRenderer.cpp  iRenderer.h  iRenderer.inl  iRenderer2.cpp  iRenderer2.h  iView.cpp  iView.h
src/igor/igor/resources/: iFactory.h  iResource.cpp  iResource.h  iResourceDictionary.cpp  iResourceDictionary.h  iResourceManager.cpp  iResourceManager.h  iResourceManager.inl
src/igor/igor/scene/: iScene.cpp  iScene.h  iSceneFactory.cpp  iSceneFactory.h
src/igor/igor/simulation/: iParticleEmitter.cpp  iParticleEmitter.h  (+6 more)
(+15547 files in other folders)
